[package]
name = "app"
version = "0.0.0"
description = "A Tauri App"
authors = ["Tauri Programme within The Commons Conservancy"]
license-file = "LICENSE"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta" }

[dependencies]
serde_json = { version = "1" }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.0.0-beta", features = ["macos-private-api"] }
window-vibrancy = { path = "../../../" }
